cannapag/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cannapag-api-rest
spec:
  replicas: 3
  selector:
    matchLabels:
      name: cannapag-api-rest
  strategy:
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: cannapag-api-rest
    spec:
      imagePullSecrets:
        - name: harbor
        - name: harbor-rancher
      containers:
        - name: cannapag-api-rest
          image: harbor.llucasshenrique.space/cannapag/api-rest:0.5.0-alpha
#           imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3333
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
