cannapag/kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cannapag-api-rest
spec:
  externalTrafficPolicy: Local
  type: NodePort
  selector:
    name: cannapag-api-rest
  ports:
  - name: http
    port: 3333
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: cannapag-api-rest-lb
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    name: cannapag-api-rest
  ports:
  - name: http
    port: 3333
    targetPort: http
