cannapag/kustomize/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cannapag-api-rest-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev-cannapag.llucasshenrique.space`)
      kind: Rule
      services:
        - name: cannapag-api-rest
          port: 3333
  tls:
    provider: cloudflare
